Изменение на главной странице

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-      shvatka@gmail.com
+      shvatka@gmail.com +972 54-8059911
       </div>
     </header>
     <main>
