--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      shvatka@gmail.com +972 54-8059911
+        <a class= "header-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+        <a class="header-phone"   href="tel:+79876543210">+7 987 654 32 10</a>
          </div>
     </header>
     <main>
