--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <section class="intro">
       
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -44,7 +47,9 @@
     </main>
     <footer class="page-footer">
       <div class="container"
-      Контакты в подвале
+      <a class="footer-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+    <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
+  </div>
     </div>
     </footer>
   </body>
